src/syntax_analysis/statement/tests/snapshots/rust_monkey_interpreter__syntax_analysis__statement__tests__test_syntax_analysis_for_let_statements_syntax_errors_case2.snap
---
source: src/syntax_analysis/statement/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
{
  "abstract_syntax_tree": [],
  "syntax_parsing_errors": [
    "Syntax error : Expected a IDENTIFIER."
  ]
}
